src/objects/UPI_Questionnaire__c.object
<CustomObject>
    <description>Long questionnaires for Unpaid Interns.</description>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Member__r.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer_A1__c</fullName>
        <label>Answer A1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X-ray Technologist</fullName>
                </value>
                <value>
                    <fullName>Respiratory Therapist</fullName>
                </value>
                <value>
                    <fullName>Surgical Technologist</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Technologist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_A2_1__c</fullName>
        <inlineHelpText>Enter a number.</inlineHelpText>
        <label>Answer A2.1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer_A2_2__c</fullName>
        <inlineHelpText>Please explain.</inlineHelpText>
        <label>Answer A2.2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_A3__c</fullName>
        <label>Answer A3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_A4_1__c</fullName>
        <label>Answer A4.1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_A5__c</fullName>
        <inlineHelpText>Char limit is 255.</inlineHelpText>
        <label>Answer A5</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_B1_1__c</fullName>
        <label>Answer B1.1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_B1_2__c</fullName>
        <inlineHelpText>Please explain.</inlineHelpText>
        <label>Answer B1.2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_B2__c</fullName>
        <label>Answer B2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_B3__c</fullName>
        <inlineHelpText>Char limit is 255.</inlineHelpText>
        <label>Answer B3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_B4__c</fullName>
        <label>Answer B4</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_B6_1__c</fullName>
        <label>Answer B6.1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_C10_1__c</fullName>
        <label>Answer C10.1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_C10_2__c</fullName>
        <inlineHelpText>Please explain.</inlineHelpText>
        <label>Answer C10.2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_C11__c</fullName>
        <inlineHelpText>Enter a number.</inlineHelpText>
        <label>Answer C11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer_C12_1__c</fullName>
        <label>Answer C12.1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_C14__c</fullName>
        <inlineHelpText>Char limit is 255.</inlineHelpText>
        <label>Answer C14</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_C17__c</fullName>
        <inlineHelpText>Enter a number.</inlineHelpText>
        <label>Answer C17</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer_D10__c</fullName>
        <inlineHelpText>Char limit is 255.</inlineHelpText>
        <label>Answer D10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_D1__c</fullName>
        <label>Answer D1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_D2__c</fullName>
        <inlineHelpText>Char limit is 255.</inlineHelpText>
        <label>Answer D2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_D3_1__c</fullName>
        <label>Answer D3.1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_D3_2__c</fullName>
        <inlineHelpText>Please explain.</inlineHelpText>
        <label>Answer D3.2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_D5_1__c</fullName>
        <label>Answer D5.1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_E1_1__c</fullName>
        <label>Answer E1.1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_E1_2__c</fullName>
        <inlineHelpText>Please explain.</inlineHelpText>
        <label>Answer E1.2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_E2_1__c</fullName>
        <label>Answer E2.1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_E4__c</fullName>
        <label>Answer E4</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_E5__c</fullName>
        <inlineHelpText>Char limit is 255.</inlineHelpText>
        <label>Answer E5</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_E6__c</fullName>
        <label>Answer E6</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_F1__c</fullName>
        <inlineHelpText>Char limit is 32,768.</inlineHelpText>
        <label>Answer F1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_F2__c</fullName>
        <inlineHelpText>Char limit is 32,768.</inlineHelpText>
        <label>Answer F2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_F3__c</fullName>
        <inlineHelpText>Char limit is 32,768.</inlineHelpText>
        <label>Answer F3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coms_Date_Reviewed__c</fullName>
        <label>Coms Date Reviewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Coms_Review_Comments__c</fullName>
        <label>Coms Review Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Coms_Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coms Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UPI_Questionnaires1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coms_Reviewed__c</fullName>
        <label>Coms Reviewed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Reviewed</fullName>
                    <default>true</default>
                    <label>Not Reviewed</label>
                </value>
                <value>
                    <fullName>Yes - Accepted</fullName>
                </value>
                <value>
                    <fullName>Yes - Not Accepted</fullName>
                </value>
                <value>
                    <fullName>Yes - Follow-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <formula>Member__r.Coordinator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>TEXT(Member__r.Division_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Member__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To input or change email,hover on Member&apos;s Full Name,click Edit to take you to member&apos;s record and enter email and click Save.</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <formula>Member__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Member__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <label>Follow up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>CASE( TEXT(Member__r.Gender__c), &quot;F&quot;, &quot;Female&quot;, &quot;M&quot;, &quot;Male&quot;,&quot;Unknown&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <formula>Member__r.Hire_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <formula>Member__r.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To input or change home phone,hover on Member&apos;s Full Name,click Edit to take you to member&apos;s record and enter home phone number and click Save.</inlineHelpText>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internship_Location__c</fullName>
        <label>Internship Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interviewer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UPI_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Member__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Date_Reviewed__c</fullName>
        <label>Legal Date Reviewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Comments__c</fullName>
        <label>Legal Review Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UPI_Questionnaires2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Reviewed__c</fullName>
        <label>Legal Reviewed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Reviewed</fullName>
                    <default>true</default>
                    <label>Not Reviewed</label>
                </value>
                <value>
                    <fullName>Yes - Accepted</fullName>
                </value>
                <value>
                    <fullName>Yes - Not Accepted</fullName>
                </value>
                <value>
                    <fullName>Yes - Follow-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Id__c</fullName>
        <formula>Member__r.MemberID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a member.</inlineHelpText>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UPI Questionnaires</relationshipLabel>
        <relationshipName>UPI_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Member__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To input or change mobile,hover on Member&apos;s Full Name,click Edit to take you to member&apos;s record and enter mobile number and click Save.</inlineHelpText>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <formula>Member__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Occupation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_1__c</fullName>
        <formula>Member__r.Organizer_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organizer 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_A1__c</fullName>
        <defaultValue>&quot;What licensing/certification/registration requirement were you trying to satisfy?&quot;</defaultValue>
        <label>Question A1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_A2__c</fullName>
        <defaultValue>&quot;How many hours were you required to work to satisfy the requirement?&quot;</defaultValue>
        <label>Question A2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_A3__c</fullName>
        <defaultValue>&quot;Where did you do your clinical internship?&quot;</defaultValue>
        <label>Question A3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_B1__c</fullName>
        <defaultValue>&quot;Were you also a student during your internship?&quot;</defaultValue>
        <label>Question B1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_B2__c</fullName>
        <defaultValue>&quot;Was the internship connected to a formal education program or receipt of academic credit?&quot;</defaultValue>
        <label>Question B2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_B3__c</fullName>
        <defaultValue>&quot;If so, what/which?&quot;</defaultValue>
        <label>Question B3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_B6_1__c</fullName>
        <defaultValue>&quot;If unsure or don&apos;t know, explain:&quot;</defaultValue>
        <label>Question B6.1</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_C10__c</fullName>
        <defaultValue>&quot;Did the “employer” hire fewer paid employees because of utilizing students/interns?&quot;</defaultValue>
        <label>Question C10</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_C11__c</fullName>
        <defaultValue>&quot;How many interns did the “employer have on staff?&quot;</defaultValue>
        <label>Question C11</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_C12__c</fullName>
        <defaultValue>&quot;Did the “employer” always have interns on staff?&quot;</defaultValue>
        <label>Question C12</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_D10__c</fullName>
        <defaultValue>&quot;If yes, explain:&quot;</defaultValue>
        <label>Question D10</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_D1__c</fullName>
        <defaultValue>&quot;Did the “employer” give you expectations that the internship could lead to a job with the “employer”?&quot;</defaultValue>
        <label>Question D1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_D2__c</fullName>
        <defaultValue>&quot;If so, how?&quot;</defaultValue>
        <label>Question D2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_E1__c</fullName>
        <defaultValue>&quot;Was there a clear understanding between the “employer” and you that you were not entitled to wages for the time spent in the internship?&quot;</defaultValue>
        <label>Question E1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_E2__c</fullName>
        <defaultValue>&quot;Was this put in writing?&quot;</defaultValue>
        <inlineHelpText>Get in writing if possible</inlineHelpText>
        <label>Question E2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_E3__c</fullName>
        <defaultValue>&quot;Are you able to provide this document?&quot;</defaultValue>
        <label>Question E3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_F1__c</fullName>
        <defaultValue>&quot;Describe your internship and the process you went through to get it.&quot;</defaultValue>
        <label>Question F1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_F2__c</fullName>
        <defaultValue>&quot;Describe a typical day when you were juggling school, your internship, and any other responsibilities you have.&quot;</defaultValue>
        <label>Question F2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_F3__c</fullName>
        <defaultValue>&quot;What was the toughest moment  you can recall during your internship and how did you feel?&quot;</defaultValue>
        <label>Question F3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Interview_Date__c</fullName>
        <label>Questionnaire Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire Interviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UPI_Questionnaires3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Questionnaires_Completed__c</fullName>
        <formula>IF(Ready_to_submit_for_review__c =TRUE, TRUE, FALSE)</formula>
        <label>Questionnaires Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Questionnaires_To_Be_Completed__c</fullName>
        <formula>IF( Ready_to_submit_for_review__c = FALSE, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Questionnaires To Be Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_to_submit_for_review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to submit for review?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bay Area</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Central Valley</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPI_Record_Link__c</fullName>
        <formula>&quot;https://uhw.my.salesforce.com/&quot; &amp; Id</formula>
        <label>UPI Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPI_Type__c</fullName>
        <label>UPI Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Not Qualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <formula>Member__r.Work_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yes_Coms_Reviewed__c</fullName>
        <formula>IF( TEXT(Coms_Reviewed__c)=&quot;Not Reviewed&quot; , FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yes Coms Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yes_Legal_Reviewed__c</fullName>
        <formula>IF(TEXT( Legal_Reviewed__c) = &quot;Not Reviewed&quot;, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yes Legal Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yes_Reviewed_By_Both__c</fullName>
        <formula>IF(Yes_Coms_Reviewed__c=TRUE  &amp;&amp; Yes_Legal_Reviewed__c = TRUE, TRUE, FALSE)</formula>
        <label>Yes Reviewed By Both</label>
        <type>Checkbox</type>
    </fields>
    <label>UPI Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Employer__c</columns>
        <columns>Occupation__c</columns>
        <columns>Mobile__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Interviewer_Name__c</columns>
        <columns>Interview_Date__c</columns>
        <columns>Internship_Location__c</columns>
        <columns>Division__c</columns>
        <columns>UPI_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_UPI_Targets_From_Phase_I</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Priority__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Employer__c</columns>
        <columns>Occupation__c</columns>
        <columns>Mobile__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Interviewer_Name__c</columns>
        <columns>Interview_Date__c</columns>
        <columns>Internship_Location__c</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPI_Type__c</field>
            <operation>equals</operation>
            <value>Target</value>
        </filters>
        <label>All UPI Targets From Phase I</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Coms_Reviewed</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Coms_Reviewed_By__c</columns>
        <columns>Coms_Date_Reviewed__c</columns>
        <columns>Coms_Review_Comments__c</columns>
        <columns>Coms_Reviewed__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Priority__c</columns>
        <columns>Employer__c</columns>
        <columns>Occupation__c</columns>
        <columns>Mobile__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_submit_for_review__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Coms_Reviewed__c</field>
            <operation>notEqual</operation>
            <value>Not Reviewed</value>
        </filters>
        <label>Coms Reviewed</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Coms_To_Review</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Priority__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Employer__c</columns>
        <columns>Occupation__c</columns>
        <columns>Mobile__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Interviewer_Name__c</columns>
        <columns>Interview_Date__c</columns>
        <columns>Internship_Location__c</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_submit_for_review__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>UPI_Type__c</field>
            <operation>equals</operation>
            <value>Target</value>
        </filters>
        <filters>
            <field>Coms_Reviewed__c</field>
            <operation>equals</operation>
            <value>Not Reviewed</value>
        </filters>
        <label>Coms To Review</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Legal_Reviewed</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Legal_Reviewed_By__c</columns>
        <columns>Legal_Date_Reviewed__c</columns>
        <columns>Legal_Review_Comments__c</columns>
        <columns>Legal_Reviewed__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Priority__c</columns>
        <columns>Employer__c</columns>
        <columns>Occupation__c</columns>
        <columns>Mobile__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_submit_for_review__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Legal_Reviewed__c</field>
            <operation>notEqual</operation>
            <value>Not Reviewed</value>
        </filters>
        <label>Legal Reviewed</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Legal_To_Review</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Priority__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Employer__c</columns>
        <columns>Occupation__c</columns>
        <columns>Mobile__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Interviewer_Name__c</columns>
        <columns>Interview_Date__c</columns>
        <columns>Internship_Location__c</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_submit_for_review__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>UPI_Type__c</field>
            <operation>equals</operation>
            <value>Target</value>
        </filters>
        <filters>
            <field>Legal_Reviewed__c</field>
            <operation>equals</operation>
            <value>Not Reviewed</value>
        </filters>
        <label>Legal To Review</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
</CustomObject>